CHANGES IN FLTK 1.1.0

	- Fl_File_Icon::find() did not check the basename of a
	  filename for a match; this caused matches for a
	  specific filename (e.g. "fluid") to fail.
	- The Fl_Shared_Image class now supports additional
	  image handling functions - this allows you to support
	  additional image file formats transparently.


CHANGES IN FLTK 1.1.0b12

	- Documentation updates.
	- Fl_Choice didn't clip the current value properly - it
	  wasn't accounting for the box border width.
	- The forms compatibility functions are now placed in a
	  "fltk_forms" library to match FLTK 2.0.
	- Renamed down() and frame() to fl_down() and
	  fl_frame(), filename_xyz() to fl_filename_xyz(), and
	  all of the define_FL_FOO() functions for the custom
	  boxtypes to fl_define_FL_FOO() to avoid namespace
	  clashes.
	- Stereo OpenGL support (patch from Stuart Levy)
	- All of the convenience functions defined in fl_ask.H
	  now resize the widgets and dialog window as needed for
	  the labels and prompt.
	- Backported FLTK 2.0 dual cut/paste buffer code.
	- Added support for Xft library to provide anti-aliased
	  text on X11.
	- Fl_Help_View didn't keep track of the background color
	  of cells properly.
	- Fl_Browser::item_width() didn't compute the width of
	  the item properly when column_widths() was set.
	- Fl_Button didn't check to see if the widget could
	  accept focus before taking input focus.
	- Fl_Help_View didn't preserve target names (e.g.
	  "filename.html#target") when following links.
	- Drag-and-drop support for MacOS.
	- Updated MacOS issues documentation.


CHANGES IN FLTK 1.1.0b11

	- Now conditionally use the WIN32 TrackMouseEvent API
	  (default is no...)
	- Fixed a table rendering bug in the Fl_Help_View
	  widget.
	- The fltk-config script now recognizes all common C++
	  extensions.
	- The menu code was using overlay visuals when the
	  scheme was set to "plastic".
	- Fixed some drawing problems with Fl_Light_Button and
	  its subclasses.